fixing cutoff text

--- a/min.css
+++ b/min.css
@@ -231,5 +231,7 @@ input.checkbox {
 {
   height: 600px;
 }
-
+.caption {
+  width: 40%;
+}
 }
